2005-11-08  Kevin P. Fleming  <kpfleming@digium.com>

	* res/res_features.c (ast_bridge_call_thread_launch): set SCHED_RR separately from thread creation, so it won't fail when running as non-root (issue #5601, different fix)

	* pbx.c (pbx_builtin_pushvar_helper): add new API function for setting variables that can exist multiple times (issue #2720)
	* apps/Makefile (APPS): add app_stack (issue #2720)
	* apps/app_stack.c: new applications (issue #2720)

	* apps/app_meetme.c: fix two audio delay problems related to using non-Zap channels in conferences (issues #3599 and #4252)
	* configs/meetme.conf.sample: add documentation of new 'audiobuffers' setting to control buffering on incoming audio from non-Zap channels

	* channels/chan_local.c (local_call): move channel variables from incoming to outgoing instead of inheriting them (issue #5604)

	* many files: add explicit include of stdio.h (issue #5650)

2005-11-07  Kevin P. Fleming  <kpfleming@digium.com>

	* UPGRADE.txt (Parking): add note about new parking behavior (issue #5532)

	* many files: more Cygwin compatibility, and proper getloadavg() prototype/macro (issue #5569)

	* include/asterisk/lock.h (__ast_pthread_mutex_lock): correct build with DETECT_DEADLOCKS defined (issue #5570)

2005-11-07  Russell Bryant  <russell@digium.com>

	* apps/app_queue.c: upgrade to new arg/option API and implement priority jumping control (issue #5580)
	* many files: Add missing include of stdio.h, and remove some duplicate and unused header includes

	* include/asterisk/app.h: Increment the arg_index in the options structure to fix applicaiton options that have arguments to them

2005-11-07  Kevin P. Fleming  <kpfleming@digium.com>

	* cryptostub.c: include necessary headers
	* include/asterisk/crypto.h: don't include unnecessary headers

	* manager.c (action_setvar): add support for setting global variables (issue #5571)

	* Makefile: correct cross-compilation issue introduced in Cygwin patches (issue #5572)
